# onnx-chainer

./: .gitignore  .readthedocs.yml  .travis.yml  INSTALL.md  README.md  check_autopep8  setup.cfg  setup.py
.chainerci/: Dockerfile  README.md  config.pbtxt  run_test.bat  run_test.sh
.flexci/: README.md  config.pbtxt  run_example.sh  run_test.bat  run_test.sh
docker/: Dockerfile  build_docker.sh  run_all_tests.sh  run_tests.sh
docker/python2.7/: Dockerfile
docker/python3.6/: Dockerfile
docs/source/: conf.py  index.rst
examples/: sample_export.py  sample_rt.py
examples/caffe2/: README.md  export.py
examples/mxnet/: export.py  run.sh  vgg16.onnx.txt
examples/nnvm/: export.py  run.sh
examples/resnet50/: export.py
examples/yolov2tiny/: export.py
onnx_chainer/: __init__.py  context.py  export.py  export_testcase.py  graph.py  mapping.py  onnx_helper.py  replace_func.py
onnx_chainer/functions/: __init__.py  activation.py  array.py  connection.py  converter.py  loss.py  math.py  noise.py  normalization.py  opset_version.py  pooling.py
onnx_chainer/testing/: __init__.py  get_test_data_set.py  helper.py  input_generator.py  test_mxnet.py  test_onnxruntime.py
tests/: Dockerfile  check_compatibility.py  conftest.py  helper.py  run_tests.sh  test_caffe2.py  test_export.py  test_export_testcase.py  test_external_converter.py  test_inout.py  test_models.py  test_mxnet.py  test_nnvm.py  test_replace_func.py  test_rt.py
tests/functions_tests/: test_activations.py  test_arrays.py  test_connections.py  test_loss.py  test_maths.py  test_noises.py  (+2 more)
(+42 files in other folders)
