[metadata]
description-file = README.md

[pep8]
exclude = .eggs,*.egg,build,docs,.git,venv

[flake8]
exclude = .eggs,*.egg,build,docs,.git,venv

[tool:pytest]
filterwarnings =
    # ``collections.MutableSequence`` in protobuf is warned by
    # Python 3.7.
    ignore:Using or importing the ABCs from 'collections':DeprecationWarning:google\.protobuf
    # `` collections.Iterable`` in onnx helper is warned by
    # Python 3.7.
    ignore:Using or importing the ABCs from 'collections':DeprecationWarning:onnx\.helper
    ignore:Possible nested set at position
markers =
    gpu: mark a test using GPU module.
